# zikhron

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  generate.sh  notes  zikhron.code-workspace
benchmark/: CMakeLists.txt
benchmark/utils_linear_set/: bench.cpp
ctre-single-header/: CMakeLists.txt
ctre-single-header/include/ctre/single-header/: ctre.hpp
deprecated/markup/: CMakeLists.txt
deprecated/markup/include/markup/: Markup.h  Word.h
deprecated/markup/src/: Markup.cpp  Word.cpp
imguitest/: CMakeLists.txt  main.cpp
imguitest/zgui/: AsyncDataBase.cpp  AsyncDataBase.h  AsyncTreeWalker.cpp  AsyncTreeWalker.h  CardDisplay.cpp  CardDisplay.h  Fonts.cpp  Fonts.h  MainWindow.cpp  MainWindow.h  MediaPlayer.cpp  MediaPlayer.h  SideBar.cpp  SideBar.h  TextDraw.cpp  TextDraw.h  Texture.cpp  Texture.h  Theme.cpp  Theme.h  Token.cpp  Token.h  junk.cpp
imguitest/zgui/widget/: Box.cpp  Box.h  Button.cpp  Button.h  Layout.cpp  Layout.h  Theme.cpp  Theme.h  Widget.cpp  Widget.h  Window.cpp  Window.h  imglog.cpp
src/: Application.cpp  CMakeLists.txt  Cedict.cpp  Cedict.h  DataThread.cpp  DataThread.h  Dictionary.cpp  Dictionary.h  Ease.h  TextCard.cpp  TextCard.h  VocabularySR.cpp  VocabularySR.h  VocabularySR_TreeWalker.cpp  VocabularySR_misc.cpp  ZH_Annotator.cpp  ZH_Annotator.h  ZH_Dictionary.cpp  ZH_Dictionary.h  rapidjosnWrapper.h  zikhron.cpp
src/QML/: main.qml  qml.qrc  test_item.qml
src/QML/card/: AnnotationChoice.qml  Card.qml  CardAnnotate.qml  CardDisplay.qml  PopupItemChoice.qml  SelectableTextArea.qml
src/QML/cfg/: qtquickcontrols2.conf
src/annotation/: CMakeLists.txt
src/annotation/include/annotation/: AdaptJiebaDict.h  AnnotationFwd.h  Card.h  CardDB.h  CardPack.h  CardPackDB.h  Ease.h  FreqDictionary.h  JieBa.h  JpnTokenizer.h  Markup.h  Mecab.h  Rules.h  Sudachi.h  TextCard.h  Token.h  TokenText.h  TokenizationChoiceDB.h  Tokenizer.h  TokenizerChi.h  TokenizerJpn.h  Word.h  WordDB.h  ZH_Annotator.h  ZH_Tokenizer.h
src/annotation/src/: AdaptJiebaDict.cpp  Card.cpp  CardDB.cpp  CardPack.cpp  CardPackDB.cpp  Ease.cpp  FreqDictionary.cpp  JieBa.cpp  JpnTokenizer.cpp  Jumanpp.cpp  Jumanpp.h  JumanppWrapper.cpp  Markup.cpp  Mecab.cpp  MecabWrapper.cpp  MecabWrapper.h  Rules.cpp  Sudachi.cpp  TextCard.cpp  Token.cpp  TokenText.cpp  TokenizationChoiceDB.cpp  Tokenizer.cpp  TokenizerChi.cpp  TokenizerJpn.cpp  Word.cpp  WordDB.cpp  ZH_Annotator.cpp  ZH_Tokenizer.cpp
src/card_data_base/: CMakeLists.txt
src/card_data_base/include/card_data_base/: Card.h  CardPack.h  CardPackDB.h  CbdFwd.h  Video.h  (+1 more)
src/card_data_base/src/: Card.cpp  CardPack.cpp  CardPackDB.cpp  Video.cpp  VideoPack.cpp
src/database/: CMakeLists.txt
src/database/src/: Card.cpp  CardDB.cpp  CardIdGenerator.h  CardPack.cpp  CardPackDB.cpp  ParsingHelpers.cpp  ParsingHelpers.h  SpacedRepetitionData.cpp  Subtitle.cpp  SubtitlePicker.cpp  TokenizationChoiceDB.cpp  TokenizationChoiceDbChi.cpp  Track.cpp  Translation.cpp  Video.cpp  VideoDB.cpp  VideoPack.cpp  VideoPackDB.cpp  VideoSet.cpp  VocableProgress.cpp  Word.cpp  WordDB.cpp  WordDB_chi.cpp  WordDB_jpn.cpp  Word_chi.cpp  Word_jpn.cpp
src/dictionary/: CMakeLists.txt
src/dictionary/src/: DictionaryChi.cpp  DictionaryJpn.cpp  Entry.cpp  JpnDictionary.cpp  Kana.cpp  Word.cpp  WordDB.cpp  ZH_Dictionary.cpp
src/gtkgui/: CMakeLists.txt
src/gtkgui/src/: AddCards.cpp  AddCards.h  AnnotationOverlay.cpp  AnnotationOverlay.h  Application.cpp  ButtonGroup.cpp  ButtonGroup.h  CardDraw.cpp  CardDraw.h  DataThread.cpp  DataThread.h  DisplayCard.cpp  DisplayCard.h  EaseChoice.cpp  EaseChoice.h  MainWindow.cpp  MainWindow.h  MediaButtons.cpp  MediaButtons.h  MediaSlider.cpp  NotebookPage.h  SubtitleOverlay.cpp  SupplyAudio.cpp  SupplyAudio.h  TextDraw.cpp  TextDraw.h  VideoSpace.cpp  VideoSpace.h  VocableList.cpp  VocableList.h  VocableOverlay.cpp  VocableOverlay.h
src/gui/: CMakeLists.txt  HtmlGen.cpp  HtmlGen.h  Observer.cpp  Observer.h
src/gui/QML/: List.qml  main.qml  qml.qrc
src/gui/card/: Annotate.cpp  Annotate.h  Display.cpp  Display.h  Edit.cpp
src/gui/src/: Annotate.cpp  Annotate.h  Application.cpp  DataThread.cpp  DataThread.h  Display.cpp  Display.h  Edit.cpp  Edit.h
src/kocoro/: CMakeLists.txt
src/kocoro/src/: SynchronousExecutor.cpp
src/misc/: CMakeLists.txt
src/misc/src/: Config.cpp
src/multimedia/: CMakeLists.txt
src/multimedia/src/: CardAudioGroup.cpp  ExtractSubtitles.cpp  MediaPlayer.cpp  Mediaplayer.cpp  MpvWrapper.cpp  Subtitles.cpp  Videoplayer.cpp  mediaplayer.cpp
src/spaced_repetition/: CMakeLists.txt
src/spaced_repetition/src/: AsyncTreeWalker.cpp  Card.cpp  CardMeta.cpp  CardProgress.cpp  DataBase.cpp  DataBase_deprecated.cpp  Node.cpp  Node.h  Path.h  SR_DataBase.cpp  Scheduler.cpp  Scheduler2.cpp  Time.cpp  Time.h  Tree.cpp  Tree.h  TreeWalker.cpp  TreeWalker.h  Vocable.cpp  VocableMeta.cpp  VocableProgress.cpp  Vocabulary.cpp  VocabularySR.cpp  VocabularySR_TreeWalker.cpp  VocabularySR_X.cpp  VocabularySR_misc.cpp  VocabularySR_part1.cpp  VocabularySR_part2.cpp  Vocabulary_misc.cpp  WalkableData.cpp
src/utils/: CMakeLists.txt  Markup.cpp  Markup.h  Memoizer.h  StringU8.cpp  StringU8.h  min_element_val.h
src/utils/src/: Crc32.cpp  ProcessPipe.cpp  Property.cpp  StringU8.cpp  Time.cpp  string_split.cpp
src/zgui/: CMakeLists.txt
src/zgui/context/: CMakeLists.txt
src/zgui/gui/: CMakeLists.txt
src/zgui/widgets/: CMakeLists.txt
test/: CMakeLists.txt  JpnDictionary.cpp  JpnDictionary.h  Jumanpp.cpp  Jumanpp.h  callee.cpp  catch_main.cpp  constexpr_tests.cpp  jumantest.cpp  kocoro_signal.cpp  main.cpp  print_char_jpn.cpp  schedulerTest.cpp  scratch.cpp  tests.cpp
test/dictionary/: test.cpp
test/scheduler/: CMakeLists.txt  LSTM.cpp  LSTM.h  SRS_data.h  main.cpp  scheduler.cpp  scheduler.h  user.cpp  user.h  weight.cpp  weight.h
test/sr_treewalker/: CMakeLists.txt  main.cpp  test.cpp
test/sr_treewalker/old/: treewalker.cpp
test/tokenizer/: CMakeLists.txt  main.cpp
test/utils_linear_set/: test.cpp
(+241 files in other folders)
