cmake_minimum_required(VERSION 3.19)
project(zikhron)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_STANDARD 20)

set(CPM_SOURCE_CACHE "${CMAKE_SOURCE_DIR}/build_modules")
include(cmake/CPM.cmake)
CPMAddPackage("gh:boost-ext/di@1.3.2")
CPMAddPackage("gh:catchorg/Catch2@3.3.2")
CPMAddPackage("gh:fmtlib/fmt#12.0.0")
CPMAddPackage("gh:gabime/spdlog@1.16.0")
CPMAddPackage("gh:hanickadot/compile-time-regular-expressions#v3.8")
CPMAddPackage("gh:microsoft/GSL@4.0.0")
CPMAddPackage("gh:nlohmann/json@3.11.3")
CPMAddPackage("gh:glfw/glfw#3.3.8")
CPMAddPackage("gh:Neargye/magic_enum@0.9.7")
CPMAddPackage("gh:palacaze/sigslot@1.2.2")
CPMAddPackage("gh:zeux/pugixml@1.14")
include(FindPkgConfig)

include(${CMAKE_SOURCE_DIR}/cmake/gen_cfg_json.cmake)
gen_cfg_json()
add_subdirectory(resources)
add_subdirectory(src)
add_subdirectory(third_party)
option(ENABLE_TESTING "Enable Test Builds" ON)

if(ENABLE_TESTING)
    enable_testing()
    message("Building tests..")
    add_subdirectory(test)
endif()


