add_library(zikhron_annotation STATIC)
add_library(zikhron::annotation ALIAS zikhron_annotation)
target_include_directories(zikhron_annotation
PRIVATE
    include/annotation
    src
PUBLIC
    include
)
target_sources(zikhron_annotation
    PRIVATE
        include/annotation/AdaptJiebaDict.h
        include/annotation/Card.h
        include/annotation/CardPack.h
        include/annotation/CardPackDB.h
        include/annotation/Ease.h
        include/annotation/FreqDictionary.h
        include/annotation/JieBa.h
        include/annotation/Rules.h
        include/annotation/Token.h
        include/annotation/TokenText.h
        include/annotation/Tokenizer.h
        include/annotation/Word.h
        include/annotation/WordDB.h
        src/AdaptJiebaDict.cpp
        src/Card.cpp
        src/CardPack.cpp
        src/CardPackDB.cpp
        src/Ease.cpp
        src/FreqDictionary.cpp
        src/JieBa.cpp
        src/Rules.cpp
        src/Token.cpp
        src/TokenText.cpp
        src/Tokenizer.cpp
        src/Word.cpp
        src/WordDB.cpp
)
target_link_libraries(zikhron_annotation
    PUBLIC
        zikhron::dictionary
        zikhron::miscellaneous
    PRIVATE
        Microsoft.GSL::GSL
        cppjieba::cppjieba
        ctre::ctre
        magic_enum::magic_enum
        nlohmann_json::nlohmann_json
        spdlog::spdlog
        zikhron::spaced_repetition
        zikhron::utils
        zikhron::warnings
)

set_property(TARGET zikhron_annotation PROPERTY CXX_STANDARD 23)
