add_library(zikhron_annotation)
add_library(zikhron::annotation ALIAS zikhron_annotation)
target_include_directories(zikhron_annotation
PRIVATE
    include/annotation
    src
PUBLIC
    include
)
target_sources(zikhron_annotation
    PRIVATE
        include/annotation/AdaptJiebaDict.h
        include/annotation/Ease.h
        include/annotation/FreqDictionary.h
        include/annotation/JieBa.h
        include/annotation/Mecab.h
        include/annotation/Rules.h
        include/annotation/Sudachi.h
        include/annotation/Token.h
        include/annotation/TokenText.h
        include/annotation/Tokenizer.h
        include/annotation/TokenizerChi.h
        include/annotation/TokenizerJpn.h
        include/annotation/detail/JumanppWrapper.h
        src/AdaptJiebaDict.cpp
        src/Ease.cpp
        src/FreqDictionary.cpp
        src/JieBa.cpp
        src/Mecab.cpp
        src/MecabWrapper.cpp
        src/MecabWrapper.h
        src/Rules.cpp
        src/Sudachi.cpp
        src/Token.cpp
        src/TokenText.cpp
        src/TokenizerChi.cpp
        src/TokenizerJpn.cpp
)
target_link_libraries(zikhron_annotation
    PUBLIC
        zikhron::database
        zikhron::dictionary
        zikhron::miscellaneous
    PRIVATE
        Microsoft.GSL::GSL
        cppjieba::cppjieba
        mecab::mecab
        ctre::ctre
        magic_enum::magic_enum
        spdlog::spdlog
        zikhron::spaced_repetition
        zikhron::utils
        zikhron::warnings
)

set_property(TARGET zikhron_annotation PROPERTY CXX_STANDARD 23)
