add_library(zikhron_database)
add_library(zikhron::database ALIAS zikhron_database)
target_include_directories(zikhron_database
PRIVATE
    include/database
    src
PUBLIC
    include
)
target_sources(zikhron_database
    PRIVATE
        include/database/Card.h
        include/database/CardDB.h
        include/database/CardPack.h
        include/database/CardPackDB.h
        include/database/IdGenerator.h
        include/database/SpacedRepetitionData.h
        include/database/Subtitle.h
        include/database/SubtitlePicker.h
        include/database/TokenizationChoiceDB.h
        include/database/TokenizationChoiceDbChi.h
        include/database/Track.h
        include/database/Video.h
        include/database/VideoDB.h
        include/database/VideoSet.h
        include/database/Word.h
        include/database/WordDB.h
        include/database/WordDB_chi.h
        include/database/WordDB_jpn.h
        include/database/WordKey_jpn.h
        include/database/Word_chi.h
        include/database/Word_jpn.h
        src/Card.cpp
        src/CardDB.cpp
        src/CardPack.cpp
        src/CardPackDB.cpp
        src/ParsingHelpers.cpp
        src/ParsingHelpers.h
        src/SpacedRepetitionData.cpp
        src/Subtitle.cpp
        src/SubtitlePicker.cpp
        src/TokenizationChoiceDbChi.cpp
        src/Track.cpp
        src/Video.cpp
        src/VideoDB.cpp
        src/VideoSet.cpp
        src/WordDB.cpp
        src/WordDB_chi.cpp
        src/WordDB_jpn.cpp
        src/WordKey_jpn.cpp
        src/Word_chi.cpp
        src/Word_jpn.cpp
)

target_link_libraries(zikhron_database
    PUBLIC
        zikhron::annotation
        zikhron::dictionary
        zikhron::multimedia
    PRIVATE
        magic_enum::magic_enum
        spdlog::spdlog
        zikhron::miscellaneous
        zikhron::warnings
)
set_property(TARGET zikhron_database PROPERTY CXX_STANDARD 23)
