add_library(zikhron_spaced_repetition)
add_library(zikhron::spaced_repetition ALIAS zikhron_spaced_repetition)
target_include_directories(zikhron_spaced_repetition
    PRIVATE
        include/spaced_repetition
    INTERFACE
        include
)
target_sources(zikhron_spaced_repetition
    PRIVATE
        include/spaced_repetition/CardMeta.h
        include/spaced_repetition/CardProgress.h
        include/spaced_repetition/DataBase.h
        include/spaced_repetition/DataBase_deprecated.h
        include/spaced_repetition/ITreeWalker.h
        include/spaced_repetition/VocableMeta.h
        include/spaced_repetition/VocableProgress.h
        include/spaced_repetition/Vocabulary.h
        include/spaced_repetition/srtypes.h
        src/CardMeta.cpp
        src/CardProgress.cpp
        src/DataBase.cpp
        src/DataBase_deprecated.cpp
        src/Node.cpp
        src/Node.h
        src/Path.h
        src/Time.cpp
        src/Time.h
        src/Tree.cpp
        src/Tree.h
        src/TreeWalker.cpp
        src/TreeWalker.h
        src/VocableMeta.cpp
        src/VocableProgress.cpp
        src/Vocabulary.cpp
)
target_link_libraries(zikhron_spaced_repetition
    PUBLIC
        folly
        nlohmann_json::nlohmann_json
        zikhron::annotation
        zikhron::dictionary
        zikhron::miscellaneous
        zikhron::utils
    PRIVATE
        fmt::fmt
        spdlog::spdlog
        zikhron::warnings
)

set_property(TARGET zikhron_spaced_repetition PROPERTY CXX_STANDARD 23)
target_compile_definitions(zikhron_spaced_repetition PRIVATE spaced_repetition_internal_include=1)
